margin left fix for pop up admin controls, full wide fluid containers were not friendly before, z-index adjust in process

--- a/Styles/RockUtils.css
+++ b/Styles/RockUtils.css
@@ -252,6 +252,8 @@ img.jcrop-preview {
   -moz-box-shadow: 3px 3px 3px 0px rgba(0, 0, 0, 0.4);
   -webkit-box-shadow: 3px 3px 3px 0px rgba(0, 0, 0, 0.4);
   box-shadow: 3px 3px 3px 0px rgba(0, 0, 0, 0.4);
+	margin-left: 15px;
+	z-index: 9100;
 }
 .config-bar > a {
   text-decoration: none;
